# apertium-grn

./: .gitattributes  .gitignore  Makefile.am  NOTES  README  apertium-grn.grn.lexc  apertium-grn.grn.lexc.hfst  apertium-grn.grn.mor.twol  apertium-grn.grn.rlx  apertium-grn.grn.spellrelax  apertium-grn.grn.twol  apertium-grn.pc.in  configure.ac  grn.hitparade.txt  grn_categorised.txt  hitparade.sh  modes.xml  open_dhr_anal.txt  verbs_freq.txt
corpora/: README.md  biblia.ref  malavisão.ref  miscellaneous.ref  wikipedia.dep  wikipedia.ref
corpus/: README.md  coverage.sh  grn.tagged  grn_human_rights.txt  grn_wiki_corpus.txt
dev/: countstems.sh  grammar.tsv  grn.hitparade.txt  lexicon.spa-grn.tsv  spa-grn.known.tsv  spellrelax.twol  weights.py  weights.sh
eval/: README.md  estimate-morph.py  evaluate-morph.py
eval_disam/: README.md  app_raw.txt  bible1_raw.txt  demonios_raw.txt  evaluate-tagger.py  evaluate_tagger.py  malavision_raw.txt  mozilla_raw.txt  reference.txt  reference1.txt  source.txt  source1.txt  target.txt  target1.txt  wiki_text.txt  words_list.txt
eval_disam/train_test_split/: reference_dev.txt  reference_test.txt  source_dev.txt  source_raw_dev.txt  source_raw_test.txt  source_test.txt  target_dev.txt  target_test.txt
test/: coverage-all-expected.txt  general-gen-generator-expected.txt  general-gen-generator-gold.txt  general-gen-input.txt  general-input.txt  general-morph-expected.txt  general-morph-gold.txt  tests.json
test/coverage/: coverage.sh  grn.tagged  ng_forms.txt
tests/: .~lock.demonstrative.tsv#  .~lock.incorporation.tsv#  .~lock.negative.tsv#  .~lock.presente.tsv#  .~lock.triformes.tsv#  accentuation.tsv  adjectives.tsv  aireales.tsv  biformes.tsv  comparative.tsv  demonstrative.tsv  future.tsv  imperative.tsv  incorporation.tsv  negative.tsv  past.tsv  plural.tsv  postpositions.tsv  presente.tsv  substantivantes.tsv  superlatives.tsv  test.tsv  triformes.tsv
tests/coverage/: grn_bible.txt
texts/: GEN.1.vislcg.txt  estigarribia.tsv  eval1.txt  krivoshein.tsv  wikipedia.vislcg.txt  wikipedia_eval1.txt
